; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_attr.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"load attr %p.%s\0A\00", align 1
@MP_OBJ_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mp_load_attr(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca [2 x i64], align 16
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @qstr_str(i32 %8)
  %10 = call i32 @DEBUG_OP_printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %7, i32 %9)
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = getelementptr inbounds [2 x i64], [2 x i64]* %6, i64 0, i64 0
  %14 = call i32 @mp_load_method(i64 %11, i32 %12, i64* %13)
  %15 = getelementptr inbounds [2 x i64], [2 x i64]* %6, i64 0, i64 1
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @MP_OBJ_NULL, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = getelementptr inbounds [2 x i64], [2 x i64]* %6, i64 0, i64 0
  %21 = load i64, i64* %20, align 16
  store i64 %21, i64* %3, align 8
  br label %28

22:                                               ; preds = %2
  %23 = getelementptr inbounds [2 x i64], [2 x i64]* %6, i64 0, i64 0
  %24 = load i64, i64* %23, align 16
  %25 = getelementptr inbounds [2 x i64], [2 x i64]* %6, i64 0, i64 1
  %26 = load i64, i64* %25, align 8
  %27 = call i64 @mp_obj_new_bound_meth(i64 %24, i64 %26)
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %22, %19
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i32 @DEBUG_OP_printf(i8*, i64, i32) #1

declare dso_local i32 @qstr_str(i32) #1

declare dso_local i32 @mp_load_method(i64, i32, i64*) #1

declare dso_local i64 @mp_obj_new_bound_meth(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
